# wasm-bindgen-switch

./: Cargo.toml  README.md
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
src/: lib.rs
tests/: person.js  person.rs
