[workspace]
members = ["crates/macro"]

[workspace.package]
version = "0.1.0"
authors = ["Grégoire Geis <opensource@gregoirege.is>"]
edition = "2021"
license = "MPL-2.0"

[package]
name = "wasm-bindgen-switch"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasm-bindgen-switch-macro = { path = "crates/macro" }

[dev-dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
