[package]
name = "wasm-bindgen-switch-macro"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
proc-macro-error = "1.0.4"
quote = "1.0.23"
syn = { version = "1.0.107", default-features = false, features = ["full", "parsing", "printing", "visit-mut"] }
